fixing alignment

--- a/src/components/ui/GridLayout.module.css
+++ b/src/components/ui/GridLayout.module.css
@@ -4,4 +4,9 @@
   grid-gap: 1rem;
   column-gap: 1rem;
   grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+  margin: auto;
+}
+
+.title {
+  align-content: justify;
 }
