--- a/src/index.css
+++ b/src/index.css
@@ -1,18 +1,19 @@
-@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&display=swap");
 
 body {
   padding-top: 50px;
   padding-bottom: 200px;
   display: flex;
   flex-direction: column;
-  font-family: 'Open Sans', sans-serif;
+  font-family: "Open Sans", sans-serif;
   background-color: white;
   box-sizing: border-box;
-  padding-left: 150px;
+  padding-left: 50px;
   padding-right: 50px;
+  min-height: 100%;
 }
 
-header{
+header {
   position: absolute;
   top: 0;
   left: 0;
@@ -20,14 +21,13 @@ header{
   font-size: 1.5rem;
   background-color: black;
   color: white;
-  height:50px;
+  height: 50px;
   display: flex;
   align-content: center;
-  text-indent: 10px; 
+  text-indent: 10px;
 }
 
-footer{
-  margin-top: auto;
+footer {
   position: fixed;
   bottom: 0;
   left: 0;
@@ -45,7 +45,7 @@ footer{
   width: 10px;
   height: 10px;
   background-color: black;
-  margin-left:10px;
+  margin-left: 10px;
 }
 
 .circle {
@@ -54,7 +54,6 @@ footer{
   background-color: black;
   border-radius: 50%;
   margin-right: 10px;
-  
 }
 
 .triangle {
